frontend scrollbar fixed menu modified

--- a/IntegrationBeeApp/home/static/sass/index.sass
+++ b/IntegrationBeeApp/home/static/sass/index.sass
@@ -37,11 +37,12 @@
 
 body, html
   width: 100%
-  height: 100
+  height: 100%
+  scrollbar-gutter: stable
 
 body, #app
   height: 100vh
-  hright: 100svh
+  height: 100svh
   min-height: $minimal-height
   background: $alabaster
 
