--- a/IntegrationBeeApp/home/static/sass/modules/Header.sass
+++ b/IntegrationBeeApp/home/static/sass/modules/Header.sass
@@ -30,7 +30,7 @@
   overflow: hidden
 
   img
-    height: 80%
+    height: 90%
     padding: 0
     margin: 0
 
@@ -78,6 +78,9 @@
   color: $eerie-black
   font-family: Poppins, sans-serif
   font-size: 0.8em
+  -webkit-user-select: none
+  -ms-user-select: none
+  user-select: none
 
 
 
@@ -103,6 +106,9 @@
   color: $eerie-black
   font-family: Poppins, sans-serif
   font-size: 0.8em
+  -webkit-user-select: none
+  -ms-user-select: none
+  user-select: none
 
 
 
