--- a/IntegrationBeeApp/home/static/sass/modules/Menu.sass
+++ b/IntegrationBeeApp/home/static/sass/modules/Menu.sass
@@ -43,6 +43,8 @@
     opacity: 0
 
 .NavigationMenu-Item
+  width: max-content
+  padding-right: 2em
   opacity: 1
   color: $eerie-black
   text-decoration: none
@@ -50,6 +52,9 @@
   justify-content: left
   align-items: center
   -webkit-tap-highlight-color: transparent
+  -webkit-user-select: none
+  -ms-user-select: none
+  user-select: none
 
 .NavigationMenu-Item--active
   color: $orange-peel
